--- a/site/css/main.css
+++ b/site/css/main.css
@@ -109,3 +109,31 @@ th, #flight-system td {
 .label-display {
   width: 200px;
 }
+.interface-btn {
+  margin-top: 100px;
+  width: 300px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+}
+.commission-wrapper {
+  margin-top: 100px;
+  color: navy;
+  background-color: rgba(255,255,255,.8);
+  width: 600px;
+  height: 350px;
+  border-radius: 5px;
+}
+.commission-title {
+  font-size: 20pt;
+  margin-top: 10px;
+}
+#commission-header {
+  font-style: italic;
+  padding-bottom: 20px;
+}
+.commission-label {
+  font-weight: bold;
+}
