--- a/site/css/main.css
+++ b/site/css/main.css
@@ -47,8 +47,8 @@ input {
   padding-top: 10px;
 }
 #submit-btn {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #error-msg {
   color: red;
@@ -110,14 +110,27 @@ th, #flight-system td {
   width: 200px;
 }
 .interface-btn {
-  margin-top: 100px;
-  width: 300px;
-  height: 100px;
+  margin-top: 175px;
+  margin-bottom: -50px;
+  width: 250px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
+  font-size: 12px;
 }
+
+.interface-btn-staff {
+  margin-top: 75px;
+  margin-bottom: -10px;
+  width: 250px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
 .commission-wrapper {
   margin-top: 100px;
   color: navy;
