--- a/site/css/main.css
+++ b/site/css/main.css
@@ -43,12 +43,28 @@ input {
   align-items: center;
   justify-content: center;
 }
+
+.user-greet {
+  margin-top: 50px;
+  margin-bottom: 190px;
+  align-self: middle;
+  font-size: 32px;
+  color: white;
+}
+
+.user-greet-staff {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  align-self: middle;
+  font-size: 24px;
+  color: white;
+}
 .field-padding {
   padding-top: 10px;
 }
 #submit-btn {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #error-msg {
   color: red;
@@ -110,14 +126,26 @@ th, #flight-system td {
   width: 200px;
 }
 .interface-btn {
-  margin-top: 100px;
-  width: 300px;
-  height: 100px;
+  margin-top: 175px;
+  margin-bottom: -50px;
+  width: 250px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
+  font-size: 12px;
 }
+
+.interface-btn-staff {
+  margin-top: 50px;
+  width: 250px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
 .commission-wrapper {
   margin-top: 100px;
   color: navy;
