Fixed signup styling

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -24,6 +24,7 @@ input {
 .login-form, .signup-form {
   width: 400px;
   display: inline-block;
+
 }
 .label {
   font-family: Calibri, Geneva, sans-serif;
@@ -41,7 +42,7 @@ input {
 .vertical-center {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center
 }
 
 .user-greet {
